Updated with title from Deepthi

--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-<<<<<<< HEAD
-    <title>Cyklekaelderen</title>
-=======
+  <head>
     <title>Cyklekælderen - bicycle shop</title>
->>>>>>> 1a5c6ee6622d55d46896ff532dc6828a94f20d60
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
