--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <head>
-    <title>Cyklekælderen - bicycle shop</title>
+    <title>Cykelkælderen - bicycle shop</title>
 
   </head>
   <body>
